Fixed a contrast problem with recent posts title bars

--- a/assets/scss/modules/_module-card.scss
+++ b/assets/scss/modules/_module-card.scss
@@ -54,7 +54,7 @@ $text_shadow: 1px 1px 3px $secondary_color;
 		bottom: 0em;
 		color: $white;
 		width: 100%;
-		background: linear-gradient(to bottom, rgba( $grey, .25 ) 0%, $dark_grey 100%) repeat scroll 0 0 transparent;
+		background: linear-gradient(to bottom, rgba( $grey, 0.8 ) 0%, $dark_grey 100%) repeat scroll 0 0 transparent;
 
 		&:hover {
 			background: $grey_gradient_hover;
